--- a/client/src/pages/Messages/messages.scss
+++ b/client/src/pages/Messages/messages.scss
@@ -22,12 +22,12 @@
     display: block;
 }
 .mes__main{
-    height: calc(100% - 68px);
+    // height: calc(100% - 200px);
     display: flex;
     position: relative;
 }
 .mes__sidebar{
-    width: 350px;
+    width: 100%;
     height: 100%;
     position: relative;
     margin-left: 0;
