--- a/client/src/pages/User/user.scss
+++ b/client/src/pages/User/user.scss
@@ -128,11 +128,14 @@
                     grid-template-columns: 1fr 3fr;
                 }
                 &-sidebar{
-                    grid-template-columns: 1fr 3fr;
+                    // grid-template-columns: 1fr 3fr;
                     margin-top: -15rem;
                     width: 340px;
                     position: relative;
                     display: grid;
+                    align-items: center;
+                    justify-content: space-around;
+                    align-content: center;
                 }
                 &-dynamic{
                     width: 340px;
