--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -64,6 +64,18 @@ body {
             display: flex;
             width: 100%;
         }
+        .row {
+            display: block;
+        }
+        .category__content-post {
+            display: block;
+        }
+        .category__content-post-img, .category__content-post-details
+        { display: block;
+            width: 100%;}
+            .filter__content-img {
+                margin-bottom: 6px;
+            }
     }
 }
 a {
