--- a/client/src/components/Filter/filter.scss
+++ b/client/src/components/Filter/filter.scss
@@ -59,7 +59,7 @@
     }
 
     &__page {
-        padding: 30px 0;
+        padding: 15px 0;
         display: flex;
         align-items: center;
         justify-content: space-between;
@@ -96,6 +96,11 @@
                 height: 100%;
                 object-fit: cover;
                 border-radius: 5px;
+
+                @include mobile{
+                    position: unset;
+                    width: 120px;
+                }
             }
         }
 
@@ -107,7 +112,7 @@
             &-user {
                 display: flex;
                 align-items: center;
-                gap: 0 20px;
+                gap: 0 7px;
             }
         }
 
